2000-09-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ChangeLog: Cleanup.

2000-09-05	Joel Sherrill <joel@OARcorp.com>

	* rtems/rtems_syscall.c: Changed from O_NONBLOCK to internal
	RTEMS_LIBIO_FLAGS_NO_DELAY to avoid O_NONBLOCK/O_NDELAY confusion
	and to work with the converted flags.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* kern/Makefile.am, lib/Makefile.am, libc/Makefile.am,
	net/Makefile.am, netinet/Makefile.am, nfs/Makefile.am,
	pppd/Makefile.am, rtems/Makefile.am, rtems_servers/Makefile.am,
	rtems_webserver/Makefile.am, wrapup/Makefile.am: Include compile.am

2000-09-01	Rosimildo daSilva <rdasilva@connecttel.com>

	* emfdb.c: Removed stray semi-colon.  Reported on GoAhead
	mailing lists by Jim Rudnicki <jdrudnicki@yahoo.com>

2000-08-31	Joel Sherrill <joel@OARcorp.com>

	* Merged version 2.1 of GoAhead webserver.  This update
	was submitted by Antti P Miettinen <antti.p.miettinen@nokia.com>.
	* NOTES, base64.c, ejIntrn.h, emfdb.c, emfdb.h, md5.h, md5c.c, 
	um.c, um.h: New files.
	* wbase64.c: Removed.
	* Makefile.am, asp.c, balloc.c, default.c, ej.h, ejlex.c, ejparse.c, 
	form.c, h.c, handler.c, mime.c, misc.c, ringq.c, rom.c, security.c, 
	socket.c, sym.c, uemf.c, uemf.h, url.c, value.c, webcomp.c, webmain.c, 
	webpage.c, webrom.c, webs.c, webs.h, websuemf.c, wsIntrn.h: Modified.

2000-08-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* netinet/tcp_input.c: Spelling corrections.

2000-08-30	Joel Sherrill <joel@OARcorp.com>

	* rtems_webserver/license.txt: New file.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.