@@ -26,6 +26,7 @@
 #ifndef __PPPD_H__
 #define __PPPD_H__
 
+#include <rtems.h>
 #include <stdio.h>		/* for FILE */
 #include <sys/param.h>		/* for MAXPATHLEN and BSD4_4, if defined */
 #include <sys/types.h>		/* for u_int32_t, if defined */
